Actualizacion de archivo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="presentacion__contenido">
         <h1 class="presentacion__contenido__titulo">
             Sumergete y conoce un poco sobre mí 
-            <strong class="titulo-destaque">con mi proyecto de Front-end </strong></h1>
+            <strong class="titulo-destaque">con mi proyecto de Front-end ehhmsm </strong></h1>
         <p class="presentacion__contenido__texto">
             ¡Hola! Soy Alexis Vázquez, estudiante del Instituto Técnologico De Apizaco, 
             estudiando la Ingenieria de Tecnologias de la Información y de la Comunicación, 
